<resources>
    <string name="app_name">FoodRecipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipe_fragment">Favorites</string>
    <string name="food_joke_fragment">Jokes</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="breakfast">Breakfast</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="whole30">Whole30</string>
    <string name="primal">Primal</string>
    <string name="paleo">Paleo</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="diet_type">Diet Type</string>
    <string name="drink">Drink</string>
    <string name="snacks">Snacks</string>
    <string name="finger_food">Finger Food</string>
    <string name="meal_type">Meal Type</string>
    <string name="marinade">Marinade</string>
    <string name="sauce">Sauce</string>
    <string name="beverage">Beverage</string>
    <string name="soup">Soup</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="diary_free">Diary Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="save_to_favorite">Save to Favorite</string>
    <string name="no_favorites_recipes">No Favorites Recipes</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="share">Share</string>
</resources>